# Moorhen-1

./: get_sources  get_sources_funs  initial_build.sh  moorhen_build.sh
baby-gru/public/: CootWorker.ts
baby-gru/src/components/card/: MoorhenSailsCard.tsx
baby-gru/src/components/glyco-tools/: MoorhenGlycoWidgetBase.tsx  MoorhenSailsFindSites.tsx
baby-gru/src/components/misc/: MoorhenModalsContainer.tsx
baby-gru/src/components/modal/: MoorhenDraggableModalBase.tsx  MoorhenIrisValidationModal.tsx  MoorhenSailsModal.tsx
baby-gru/src/components/model-building-tools/: MoorhenModelBuildingWidgetBase.tsx  MoorhenSailsBuilding.tsx
baby-gru/src/components/navbar-menus/: MoorhenBuildMenu.tsx  MoorhenGlycoMenu.tsx  MoorhenNavBar.tsx  MoorhenValidationMenu.tsx
baby-gru/src/components/snack-bar/: MoorhenAcceptRejectDragAtomsSnackBar.tsx  MoorhenAcceptRejectRotateTranslateSnackBar.tsx  MoorhenResidueStepsSnackBar.tsx
baby-gru/src/components/validation-tools/: MoorhenIrisValidation.tsx
baby-gru/src/store/: activeModalsSlice.ts
baby-gru/src/types/: moorhen.d.ts  sails.d.ts
baby-gru/src/utils/: MoorhenMolecule.ts  enums.ts
sails/: CMakeLists.txt
wasm_src/: CMakeLists.txt  moorhen-wrappers.cc  sails-wrappers.h
